rustdocs/errors/rust-bitcoin-units-src-locktime-mod.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:5:5
  |
5 | use core::convert::Infallible;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
 --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:8:5
  |
8 | use internals::error::InputString;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
 --> ../rust-bitcoin/units/src/locktime/mod.rs:5:1
  |
5 + extern crate internals;
  |

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:6:5
  |
6 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
   --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:168:13
    |
168 |         use core::num::IntErrorKind;
    |             ^^^^
    |             |
    |             you might be missing crate `core`
    |             help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `crate::parse_int`
  --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:13:12
   |
13 | use crate::parse_int::ParseIntError;
   |            ^^^^^^^^^ use of unresolved module or unlinked crate `parse_int`
   |
help: you might be missing a crate named `parse_int`, add it to your project and import it in your code
  --> ../rust-bitcoin/units/src/locktime/mod.rs:5:1
   |
 5 + extern crate parse_int;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/units/src/locktime/absolute/mod.rs:15:5
   |
15 | use internals::error::InputString;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  --> ../rust-bitcoin/units/src/locktime/mod.rs:5:1
   |
 5 + extern crate internals;
   |

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/units/src/locktime/absolute/mod.rs:11:5
   |
11 | use core::fmt;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved imports `crate::parse_int`, `crate::parse_int`
  --> ../rust-bitcoin/units/src/locktime/absolute/mod.rs:20:12
   |
20 | use crate::parse_int::{self, PrefixedHexError, UnprefixedHexError};
   |            ^^^^^^^^^   ^^^^ no `parse_int` in the root
   |            |
   |            use of unresolved module or unlinked crate `parse_int`
   |
help: you might be missing a crate named `parse_int`, add it to your project and import it in your code
  --> ../rust-bitcoin/units/src/locktime/mod.rs:5:1
   |
 5 + extern crate parse_int;
   |

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/units/src/locktime/relative/error.rs:5:5
  |
5 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
 --> ../rust-bitcoin/units/src/locktime/relative/error.rs:7:5
  |
7 | use internals::write_err;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
 --> ../rust-bitcoin/units/src/locktime/mod.rs:5:1
  |
5 + extern crate internals;
  |

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:11:5
   |
11 | use core::{convert, fmt};
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:15:5
   |
15 | use internals::const_casts;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  --> ../rust-bitcoin/units/src/locktime/mod.rs:5:1
   |
 5 + extern crate internals;
   |

error[E0432]: unresolved imports `crate::parse_int`, `crate::BlockHeight`, `crate::BlockMtp`, `crate::Sequence`
  --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:19:13
   |
19 | use crate::{parse_int, BlockHeight, BlockMtp, Sequence};
   |             ^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^  ^^^^^^^^ no `Sequence` in the root
   |             |          |            |
   |             |          |            no `BlockMtp` in the root
   |             |          no `BlockHeight` in the root
   |             no `parse_int` in the root

error[E0425]: cannot find type `BlockTime` in the crate root
   --> ../rust-bitcoin/units/src/locktime/absolute/mod.rs:635:36
    |
635 | ...tamps: [crate::BlockTime; 11]) -> Result<Self, ConversionError> {
    |                   ^^^^^^^^^ not found in the crate root

error[E0425]: cannot find type `BlockHeight` in the crate root
   --> ../rust-bitcoin/units/src/locktime/relative/error.rs:149:34
    |
149 |     pub(crate) chain_tip: crate::BlockHeight,
    |                                  ^^^^^^^^^^^ not found in the crate root

error[E0425]: cannot find type `BlockHeight` in the crate root
   --> ../rust-bitcoin/units/src/locktime/relative/error.rs:151:38
    |
151 |     pub(crate) utxo_mined_at: crate::BlockHeight,
    |                                      ^^^^^^^^^^^ not found in the crate root

error[E0425]: cannot find type `BlockMtp` in the crate root
   --> ../rust-bitcoin/units/src/locktime/relative/error.rs:168:34
    |
168 |     pub(crate) chain_tip: crate::BlockMtp,
    |                                  ^^^^^^^^ not found in the crate root

error[E0425]: cannot find type `BlockMtp` in the crate root
   --> ../rust-bitcoin/units/src/locktime/relative/error.rs:170:38
    |
170 |     pub(crate) utxo_mined_at: crate::BlockMtp,
    |                                      ^^^^^^^^ not found in the crate root

error[E0425]: cannot find type `BlockHeight` in the crate root
   --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:440:27
    |
440 |         chain_tip: crate::BlockHeight,
    |                           ^^^^^^^^^^^ not found in the crate root

error[E0425]: cannot find type `BlockHeight` in the crate root
   --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:441:31
    |
441 |         utxo_mined_at: crate::BlockHeight,
    |                               ^^^^^^^^^^^ not found in the crate root

error[E0425]: cannot find type `BlockMtp` in the crate root
   --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:562:27
    |
562 |         chain_tip: crate::BlockMtp,
    |                           ^^^^^^^^ not found in the crate root

error[E0425]: cannot find type `BlockMtp` in the crate root
   --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:563:31
    |
563 |         utxo_mined_at: crate::BlockMtp,
    |                               ^^^^^^^^ not found in the crate root

error: aborting due to 22 previous errors

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
